# DZ_24-1

./: .env_example  README.md  pyproject.toml  users_data.json
config/: settings.py  urls.py
materials/: admin.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_lesson_name.py  0002_initial.py  0003_alter_course_image.py  0004_course_owner_lesson_owner.py  0005_subscription.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_payment.py
